--- a/nro/chung.css
+++ b/nro/chung.css
@@ -17,18 +17,13 @@
     background-color: #B3AFAF;
     width: 100%;
     height: 100%;
-    padding-bottom: 30px;
 }
 #warning {
+    width: 100%;
     display: flex;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 #image-warning {
-    width: 15px;
-    height: 15px;
     background: url(./img/12+.png);
     background-size: cover;
     margin: 0px 5px;
@@ -46,26 +41,21 @@
     transform: translateX(-50%);
     border-radius: 10px;
     position: relative;
-    top: 20px;
+    top: 2%;
     background-color: #FFAF4C;
 }
 
 #logo {
-    width: 261px;
-    height: 100px;
     background: url(./img/logoW.png);
     cursor: pointer;
 }
 
 #title > li {
     display: inline-block;
-    padding: 2px 47px;
     background-color: #924C31;
     color: white;
-    font-size: 15px;
     font-family: Roboto-light;
     cursor: pointer;
-    
 }
 
 #title > li:hover {
@@ -180,4 +170,30 @@
     top: 38px;
     color: #bb5719;
     cursor: pointer;
+}
+
+@media screen and (min-width: 1025px) {
+
+}
+
+@media screen and (max-width: 600px) {
+    #home {
+        margin-top: 3px;
+    }
+    #warning h5 {
+        font-size: 9px;
+    }
+    #image-warning {
+        width: 13px;
+        height: 13px;
+    }
+    #logo {
+        width: 250px;
+        height: 110px;
+        margin-bottom: 5px;
+    }
+    #title > li {
+        font-size: 13px;
+        padding: 2px 20px;
+    }
 }
