--- a/nro/index.css
+++ b/nro/index.css
@@ -1,6 +1,4 @@
 #part1 {
-    width: 100%;
-    height: 440px;
     background-color: #ff5601;
     display: flex;
     flex-direction: column;
@@ -23,11 +21,9 @@
 }
 
 #image1 {
-    width: 630px;
-    height: 308px;
+    margin-top: 5px;
     background: url(./img/banner_2.png) no-repeat;
     background-size: cover;
-    margin: 5px 0px;
 }
 
 #part2 {
@@ -82,4 +78,22 @@
 #help {
     display: flex;
     margin-left: 10px;
+}    
+
+@media screen and (min-width: 1024px) {
+    
 }
+
+@media screen and (max-width: 600px) {
+    #part1 {
+        width: 100%;
+        height: 300px
+    }
+    #image1 {
+        width: 95%;
+        height: 70%;
+    }
+    
+}
+
+
